# GnuGo2Fork

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  configure  configure.in
android/: dummy.c  jni_bridge.c
engine/: fuseki.c  genmove.c  globals.c  liberty.h  matchpat.c
interface/: Makefile.am  Makefile.in  interface.c  interface.dsp  interface.h  main.c  play_ascii.c  play_gmp.c  play_gtp.c  play_solo.c  play_test.c
patterns/: connections.c  helpers.c  joseki.c  mkeyes.c  mkpat.c
sgf/: sgf.c  sgf_utils.c  sgfana.c  sgfgen.c  ttsgf.c  ttsgf_write.c
win/: makefile.win
